--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,6 +40,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+    # Set environment variables
+      - 
+        run: echo RELEASE=$(cat ./src/package.json | jq -r .release) >> $GITHUB_ENV
       -
         name: Build and push
         uses: docker/build-push-action@v3
