--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,40 +15,35 @@ on:
   pull_request:
     branches:
       - 'master'
+
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  deploy:
+    name: Build & Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Docker meta
-        id: docker_meta
-        uses: docker/metadata-action@v4
-        with:
-          images: aiastia/wg
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2 
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+    - uses: actions/checkout@v2
+      with:
+        ref: production
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+          
     # Set environment variables
-      - 
-        run: echo RELEASE=$(cat ./src/package.json | jq -r .release) >> $GITHUB_ENV
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: linux/arm/v7,linux/arm64,linux/amd64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+    - run: echo RELEASE=$(cat ./src/package.json | jq -r .release) >> $GITHUB_ENV
+    
+    # Build & Publish
+    - name: Build & Publish Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+        tags: aiastia/wg:latest, aiastia/wg:${{ env.RELEASE }}
