--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -41,4 +41,4 @@ jobs:
       with:
         push: true
         platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
-        tags: aiastia/wg:latest, aiastia/wg:${{ env.RELEASE }}
+        tags: aiastia/wg:latest
